# pytorch-onnx-cpp-pipeline

./: .gitignore  .gitmodules  Makefile  README.md  requirements.txt
Plotting/: README.md  fix.py
Plotting/example/: example.gnu  generate_data.py
Plotting/ort_inference/: ort_inference.gnu
cpp/: CMakeLists.txt  benchmark.cpp  ort_inference_from_model.cpp
cpp/include/: ort_inference_from_model.h
python/: generate_model.py
